customer: changed form to thymeleaf; return to form if input is invalid

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p>Create a Customer <a href="/customer/form">here</a></p>
+<p>Create a Customer <a href="/customer">here</a></p>
 <p>Select your desired handlebartype <a href="/produkt/lenkertyp">here</a></p>
 </body>
 </html>
