--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,5 +7,6 @@
 <body>
 <p>Create a Customer <a href="/customer">here</a></p>
 <p>Select your desired handlebartype <a href="/produkt/lenkertyp">here</a></p>
+<p>Select your desired material <a href="/produkt/material">here</a></p>
 </body>
 </html>
