--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Getting Started: Serving Web Content</title>
+    <title>Fahrradlenker Konfigurator</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link href="css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
 <body>
-<p>Create a Customer <a href="/customer">here</a></p>
-<p>Select your desired handlebartype <a href="/produkt/lenkertyp">here</a></p>
-<p>Select your desired material <a href="/produkt/material">here</a></p>
+<h1>Willkommen! Gestalten Sie hier Ihren individuellen Fahrradlenker mit unserem Konfigurator.</h1>
+<p>Erstellen Sie Ihr Kundenkonto <a href="/customer">hier</a></p>
+<script src="js/bootstrap.js" th:href="@{/js/bootstrap.js}"></script>
 </body>
 </html>
