--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link href="css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
 </head>
-<body>
+<body class="p-4">
 <h1>Willkommen! Gestalten Sie hier Ihren individuellen Fahrradlenker mit unserem Konfigurator.</h1>
 <p>Erstellen Sie Ihr Kundenkonto <a href="/customer">hier</a></p>
 <script src="js/bootstrap.js" th:href="@{/js/bootstrap.js}"></script>
